--- a/index.html
+++ b/index.html
@@ -120,21 +120,18 @@
     </style>
 </head>
 <body class="theme-dark">
-    <nav class="fixed left-0 w-full z-50 flex justify-between items-center p-4 md:p-6 transition-colors duration-300" style="top: 40px;">
+    <nav class="fixed left-0 w-full z-50 flex justify-between items-center p-4 md:p-6 transition-colors duration-300" style="top: 35px;">
         <div class="flex items-center gap-3 md:gap-6 pl-2 md:pl-16">
             <div class="text-floating text-lg md:text-xl font-bold tracking-widest uppercase whitespace-nowrap">
                 kanae&chinon <br>ペット刺繍
             </div>
         </div>
         <div class="flex flex-row gap-8 items-center mr-2"> 
-            <a href="https://www.instagram.com/my_insta_id" target="_blank" class="text-floating flex items-center gap-2 group cursor-pointer" title="Instagram">
+            <a href="https://www.instagram.com/chin.on" target="_blank" class="text-floating flex items-center gap-2 group cursor-pointer" title="Instagram">
                 <div class="sns-icon-box"><i class="fa-brands fa-instagram"></i></div>
                 <span class="text-base font-light hidden md:block group-hover:underline">Insta</span>
             </a>
-            <div onclick="copyLineID('my_line_id')" class="text-floating flex items-center gap-2 group cursor-pointer" title="Click to Copy ID">
-                <div class="sns-icon-box"><i class="fa-brands fa-line"></i></div>
-                <span class="text-base font-light hidden md:block group-hover:underline">Line</span>
-            </div>
+
         </div>
     </nav>
 
